--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   carousel_slider: ^4.2.1
   go_router: ^8.0.1
+  http : ^1.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
